@@ -1,5 +1,7 @@
 Revision history for HTML::FormWidgets
 
+         - Started adding paragraph splitting to Paragraphs subclass
+         - Fixed bug in arg expansion in localize
          - Fixed JS bug in group membership
 
 0.4.156  09/03/2009
